# HPXExternalHelloWorld

./: CMakeLists.txt
hello_world/: main.cpp
